[metadata]
name = shared-library
version = 0.0.5
author = Yevhenii Molodtsov
author_email = ymolodtsov.appwell@ancestry.com
description = A package that sends the alerts
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .